# mcp

./: .gitignore  README.md  audit.db  main.py  pyproject.toml
app/: audit.py  auth.py  config.py  downloads.py  main.py  rate_limiter.py  tools_registry.py
app/tools/email/: __init__.py  email_tool.py
app/tools/email/provider/: EmailProvider.py  ExchangeProvider.py  SmtpProvider.py
app/tools/email/template/: default.py
app/tools/presentation/: slides_tool.py
app/tools/presentation/templates/: slides_template.pptx
app/tools/report/: word_tool.py
app/tools/report/templates/: report_template.docx
app/tools/task/: task_tool.py
tools/: email_tool.py  slides_tool.py  word_tool.py
