[project]
name = "lexi"
version = "0.1.0"
description = "Local MCP server for Claude Desktop on Windows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exchangelib>=5.6.0",
    "fastapi>=0.100.0",
    "mcp[cli]>=1.27.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
lexi = "app.main:main"
lexi-stdio = "app.stdio:run"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
