[project]
name = "lexi"
version = "0.1.0"
description = "Local MCP server for Claude Desktop on Windows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "exchangelib>=5.6.0",
    "fastapi[standard]>=0.100.0",
    "fastmcp>=3.2.4",
    "mcp[cli]>=1.27.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "pywin32>=311",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]
